--- a/Second project/css/indexs.css
+++ b/Second project/css/indexs.css
@@ -86,6 +86,7 @@
     color: rgb(231, 217, 198);
     font-size:20px;
     font-weight: bolder;
+   
 }
 .home1 h2{
     font-size: 34px;
@@ -102,14 +103,20 @@
     border: none;
     border-radius: 10px;
     
+    
+}
+.home1 a{
+     border: none;
+    text-decoration: none;
+     color: white;
 }
 .aboutus{
     width: 100%;
-    height: 90vh;
+    height: 80vh;
     margin-top: 20px;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    /* align-items: flex-start; */
     background-color: rgba(255, 166, 0, 0.685);
     border-radius: 20px;
 
@@ -123,14 +130,20 @@
     border: none;
     color: white;
 }
+.contact1 a{
+    text-decoration: none;
+     color: white;
+}
 .contact{
+    margin-top: 20px;
     width: 45%;
-    height: 80vh;
+    /* height: 80vh; */
     border-radius: 10px;
 }
 .contact1{
+    margin-top: 20px;
     width: 45%;
-    height: 80vh;
+    /* height: 60vh; */
 
 }
 .contact img{
@@ -165,32 +178,42 @@
     /* background-color:rgba(255, 166, 0, 0.733); */
     
 }
-.explore1, .explore2{
-    width: 90%;
-    height: 30vh;
+.explore1{
+    width: 100%;
+    height: 40vh;
     display: flex;
-    margin-left: 4%;
-    margin-top: 3vh;
-    justify-content: space-around;
+    /* text-align: justify; */
+    /* margin-left: 4%; */
+    /* margin-top: 3vh; */
+    justify-content: space-evenly;
 }
+ .explore2{
+     width: 100%;
+    height: 40vh;
+    display: flex;
+    justify-content: space-evenly;
+ }
 .explore1 h2, .explore2 h2{
     margin-top: 100px;
+    font-size: 40px;
     color: rgb(255, 255, 255);
 }
 .explore1 h3, .explore2 h3{
     color: rgb(255, 255, 255);
+    font-size: 30px;
 }
 .expl1{
     width: 23%;
-    height: 30vh;
+    height: 35vh;
     border-radius: 20px;
-    background-color: rgb(204, 198, 198);
+    background-color: rgb(4, 3, 3);
     background-image:linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ;
     background-image: url(../img/cat-1.jpg);
-    background-size: 100% 30vh;
+    background-size: 100% 40vh;
     background-repeat: no-repeat;
-    opacity: .8;
+    opacity: .6;
     transition: 1111ms;
+    
     text-align: center;
 
 
@@ -200,12 +223,12 @@
 }
 .expl2{
     width: 23%;
-    height: 30vh;
+    height: 35vh;
     border-radius: 20px;
     background-color: white;
     background-image:linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ;
     background-image: url(../img/cat-2.jpg);
-    background-size: 100% 30vh;
+    background-size: 100% 40vh;
     background-repeat: no-repeat;
     opacity: .8;
     transition: 1111ms;
@@ -215,13 +238,13 @@
     box-shadow: 0 2px 20px rgba(0,0,0,10);
 }
 .expl3{
-    width: 23%;
-    height: 30vh;
+  width: 23%;
+    height: 35vh;
     border-radius: 20px;
     background-color: white;
     background-image:linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ;
     background-image: url(../img/cat-3.jpg);
-    background-size: 100% 30vh;
+    background-size: 100% 40vh;
     background-repeat: no-repeat;
     opacity: .8 ;
     transition: 1111ms;
@@ -232,12 +255,12 @@
 }
 .expl4{
     width: 23%;
-    height: 30vh;
+    height: 35vh;
     border-radius: 20px;
     background-color: white;
     background-image:linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ;
     background-image: url(../img/cat-4.jpg);
-    background-size: 100% 30vh;
+    background-size: 100% 40vh;
     background-repeat: no-repeat;
     opacity: .8 ;
     transition: 1111ms;
@@ -248,12 +271,12 @@
 }
 .expl5{
     width: 23%;
-    height: 30vh;
+    height: 35vh;
     border-radius: 20px;
     background-color: white;
     background-image:linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ;
     background-image: url(../img/cat-5.jpg);
-    background-size: 100% 30vh;
+    background-size: 100% 40vh;
     background-repeat: no-repeat;
     opacity: .8 ;
     transition: 1111ms;
@@ -263,13 +286,13 @@
     box-shadow: 0 2px 20px rgba(0,0,0,10);
 }
 .expl6{
-    width: 23%;
-    height: 30vh;
+   width: 23%;
+    height: 35vh;
     border-radius: 20px;
     background-color: white;
     background-image:linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ;
     background-image: url(../img/cat-6.jpg);
-    background-size: 100% 30vh;
+    background-size: 100% 40vh;
     background-repeat: no-repeat;
     opacity: .8 ;
     transition: 1111ms;
@@ -280,12 +303,12 @@
 }
 .expl7{
     width: 23%;
-    height: 30vh;
+    height: 35vh;
     border-radius: 20px;
     background-color: white;
     background-image:linear-gradient( rgba(0,0,0,0.5),rgba(0,0,0,0.5)) ;
     background-image: url(../img/cat-7.jpg);
-    background-size: 100% 30vh;
+    background-size: 100% 40vh;
     background-repeat: no-repeat;
     opacity: .8 ;
     transition: 1111ms;
@@ -296,12 +319,12 @@
 }
 .expl8{
     width: 23%;
-    height: 30vh;
+    height: 35vh;
     border-radius: 20px;
     background-color: rgb(255, 255, 255);
     background-image:linear-gradient( rgba(0,0,0,10),rgba(0,0,0,10)) ;
     background-image: url(../img/cat-8.jpg);
-    background-size: 100% 30vh;
+    background-size: 100% 40vh;
     background-repeat: no-repeat;
     opacity: .8 ;
     transition: 1111ms;
@@ -316,16 +339,18 @@
     display: flex;
     justify-content: space-around;
     width: 100%;
-    /* height: 80vh; */
+    text-align: justify;
+    /* height: 100vh; */
     /* margin-top: 30px; */
-    /* margin-bottom: 20vh;
-     */
+     margin-bottom: 10vh;
+     
 }
 .course1{
     width: 32%;
-    height: 100vh;
+    height: 90vh;
     background-color: rgb(235, 235, 230);
     /* margin-left: 20px; */
+    justify-content: space-around;
     border-radius: 20px;
 }
 .course2{
@@ -346,26 +371,29 @@
 
 }
 .one{
-    width: 32%;
-    height: 2vh;
-    margin-left: 20px;
-    margin-top: 10px;
+    margin-top: 20px;
     display: flex;
+font-size: 25px;
+justify-content: space-around;
+
 }
 .two{
-    width: 30%;
-    margin-left: 46%;
+ text-align: justify;
+font-size: 25px;
+
 }
 .headingpopul{
-    font-size:20px;
-    text-align: center;
+    font-size:20px !important;
+    text-align: justify;
+    margin-bottom: 20px;
 }
 .courses1{
     display: flex;
     justify-content: space-around;
     width: 100%;
+    /* margin-top: 20px; */
     /* height: 70vh; */
-    margin-top: 30px;
+    /* margin-top: 30px; */
 }
 .course4{
     width: 32%;
@@ -393,7 +421,7 @@
 }
 
 
-.one{
+/* .one{
     width: 95%;
     height: 2vh;
     
@@ -402,7 +430,7 @@
 .two{
     width: 95%;
     margin-left: 46%;
-}
+} */
 .headingpopul{
     font-size:20px;
     text-align: center;
@@ -422,10 +450,20 @@
     justify-content: space-around;
     margin-top: 10vh;
 }
+.choose2 h2{
+    background-color: aliceblue;
+     width: 100%; height: 10vh;
+      text-align: center;
+      font-size: 40px;
+      margin-top: 5px;
+}
 .choose1{
-    margin-top: 90px;
+    margin-top: 50px;
     width: 40%;
     /* height: 1-0vh; */
+}
+.choose2 select{
+    font-size: 20px; width: 430px;
 }
 .choose1 h1{
     color: aliceblue;
@@ -618,8 +656,183 @@
 .teacher1 h1{
 font-size: 30px !important;
 }
+@media only screen and (max-width: 1300px) {
+    .head{
+        height: 15vh;
+    }
+    .ecourses{
+        height: 6vh;
+        font-size: 18px;
+    }
+    .ecourses h2{
+        font-size: 20px;
+    }
+    .navegaction .subject{
+        height: 6vh;
+        /* top: 10; */
+        font-size: 16px;
+    }
+    .navegaction{
+        height: 6vh;
+    }
+    .homescreen{
+    height: 60vh;
+    /* text-align: center; */
+    }
+    .homescreen,img{
+        background-size: 100% 60vh;
+    }
+    .home1{
+        margin-top: 12vh;
+        margin-left: 25%;
+    }
+    .aboutus {
+        height: 45vh ;
+    }
+    .contact img{
+        height: 40vh;
+    }
+    .contact{
+        height: 90vh;
+    }
+    .contact1{
+        height: 55vh;
+    }
+    .expoHeading{
+        margin-top: 10px;
+    }
+     
+    .explore{
+        height: 55vh;
+        margin-top: 10px;
+    }
+    .explore1{
+        width: 100%;
+        height: 30vh;
+    }
+     .explore2{
+        width: 100%;
+    }
+    .explore1 h2, .explore2 h2{
+        font-size: 45px;
+    }
+    .explore1 h3, .explore2 h3{
+        font-size: 40px;
+    }
+   .expl1{
+        height: 23vh;
+        width: 23%;
+        background-size: 100% 23vh;
+    } 
+    .expl2{
+        height: 23vh;
+        width: 23%;
+        background-size: 100% 23vh;
+    } 
+    .expl3{
+        height: 23vh;
+        width: 23%;
+        background-size: 100% 23vh;
 
-@media only screen and (max-width:1000px) {
+    } 
+    .expl4{
+        height: 23vh;
+        width: 23%;
+        background-size: 100% 23vh;
+
+    }     
+     .expl5{
+        height: 23vh;
+        background-size: 100% 23vh;
+    } 
+     .expl6{
+        height: 23vh;
+        background-size: 100% 23vh;
+    } 
+     .expl7{
+        height: 23vh;
+        background-size: 100% 23vh;
+    } 
+     .expl8{
+        height: 23vh;
+        background-size: 100% 23vh;
+    } 
+    .courses{
+        height: 50vh;
+    }
+    .course1{
+        height: 50vh;
+    }
+    .course2{
+        height: 50vh;
+    }
+    .course3{
+        height: 50vh;
+    }
+    .courses1{
+        height: 50vh;
+    }
+    .course4{
+        height: 50vh;
+    }
+    .course5{
+        height: 50vh;
+    }
+    .course6{
+        height: 50vh;
+    }
+    .choose{
+        height: 60vh;
+    }
+    .choose1 p{
+        line-height: 3vh;
+    }
+    .choose2 form{
+        height: 45vh;
+     
+    }
+    .choose2{
+        height: 50vh;
+    
+    }
+    .choose2 input, .choose2 select{
+        height: 55px;
+    }
+    .teachers{
+        height: 40vh;
+    }
+    .tech1{
+        height: 30vh;
+    }.tech2{
+        height: 30vh;
+    }
+    .tech3{
+        height: 30vh;
+    }
+    .tech4{
+        height: 30vh;
+    }
+    .blogs{
+        height: 50vh;
+    }
+    .blog1{
+        height: 30vh;
+    }
+    .blog2{
+        height: 30vh;
+    }
+    .blog3{
+        height: 30vh;
+    }
+    .footer{
+        height: 40vh;
+        
+    }
+    
+   
+}
+
+@media only screen and (max-width:1080px) {
     .tech1, .tech2, .tech3, .tech4 {
     width: 24%;
 }
@@ -629,19 +842,205 @@ font-size: 30px !important;
 .tech1 h1, .tech2 h1, .tech3 h1, .tech4 h1{
     font-size: 40px !important;
 }
-.course1 ,.course2 , .course3{
-    height: 30vh;
-}
-.course1, .course2, .course3, .course4, .course5, .course6
- {
-    height: 83vh;
- }
+
  .contact1 p {
     font-size: 14px;
     /* line-height: 28px; */
     text-align: justify;
 }
-
+.explore{
+    display: flex;
+    height: 125vh;
 }
 
+.explore1{
+    display: block;
+    
+}
+.explore2{
+    display: block;
+}
+.expl1,.expl2,.expl3,.expl4,.expl5,.expl6,.expl7,.expl8{
+    width: 95%;
+}
+.popularcourse{
+    display: flex;
+    height: 145vh;
+}
+.courses{
+    display: block;
+}
+.courses1{
+    display: block;
+}
+.course1,.course2,.course3,.course4,.course5,.course6{
+    width: 95%;
+    height: 49vh;
+    margin-bottom: 30px;
+    text-align: justify;
+    justify-content: space-evenly;
+} form{
+    width: 110%;
+}
 
+}
+ 
+ @media screen and (max-width:980px) {
+
+   
+    .homescreen{
+        height: 40vh;
+    }
+    .home1{
+        margin-top: 10px;
+        margin-left:10vh;
+        font-size: 10px;
+    }
+    .homescreen,img{
+        background-size: 73vh;
+    }
+    .aboutus{
+        height: 37vh !important;
+        text-align: justify !important;
+    }
+    .contact img{
+        width: 95%;
+        height: 33vh;
+    }
+    .contact1{
+        width: 50%;
+        margin-top: 5px;
+    }
+    .contact1 p
+    {
+        line-height: 23px;
+    }
+     .contact1 button {
+        height: 5vh;
+        width: 40%;
+    }
+}
+@media screen and (max-width:880px) {
+    .aboutus{
+        display: block;
+        height: 70vh !important;
+       
+
+    }
+    .contact img{
+        height: 40vh;
+        text-align: justify;
+        width: 215%;
+        margin-left: 15px;
+        margin-top: 10px;
+    }
+    .contact1{
+        width: 90%;
+        margin-left: 20px;
+        text-align: justify !important;
+        justify-content: space-around !important;
+        margin-top: -50vh !important;
+    }
+    .contact1 button{
+        width: 30%;
+        height: 4vh;
+    }
+    .choose{
+        height: 55vh;
+        background-size: 100% 60vh;
+    }
+    .choose1{
+        margin-top: 10px;
+    }
+    .choose1 p{
+        line-height: 30px;
+    }
+    .choose2{
+        margin-top: 20px;
+        width: 45%;
+    }
+     .choose2 form{
+        height: 42vh;
+    }
+    .choose2 h2{
+        height: 5vh;
+    }
+}
+
+@media screen and (max-width:720px) {
+    .course1,.course2,.course3,.course4,.course5,.course6{
+       height: 44vh;
+}
+ .headingpopul{
+    font-size: 15px !important;
+ }
+    .one{
+        font-size: 20px;
+    }
+    .two{
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width:680px) {
+    .explore{
+        display: block;
+        height: 245vh;
+    }
+    .explore1{
+        /* display: flex; */
+        height: 116vh;
+    }
+    .expl1,.expl2,.expl3,.expl4,.expl5,.expl6,.expl7,.expl8{
+    width: 100%;
+}
+.popularcourse{
+    display: block;
+    height: 270vh;
+}
+.courses{
+    height: 130vh;
+}
+.course1,.course2,.course3,.course4,.course5,.course6{
+    width: 100%;
+    /* height: 49vh; */
+    
+}
+.teacher1{
+    display: block;
+    height: 150vh !important;
+}
+.teachers{
+    height: 230vh;
+}
+.tech1,.tech2,.tech3,.tech4{
+    width: 100%;
+    height: 50vh;
+    margin-bottom: 5vh;
+}
+.tech1 img,.tech2 img,.tech3 img,.tech4 img{
+    height: 35vh;
+}
+.tech1 h2,.tech2 h2,.tech3 h2,.tech4 h2{
+    /* height: 35vh; */
+    font-size: 55px;
+}
+.tech1 h3,.tech2 h3,.tech3 h3,.tech4 h3{
+    /* height: 35vh; */
+    font-size: 30px;
+}
+.blogs{
+    height: 110vh;
+
+}
+.blog{
+    display: block;
+}
+.blog1,.blog2,.blog3{
+    width: 100%;
+}
+.blog1 h2,.blog2 h2,.blog3 h2{
+    font-size: 50px;
+    /* margin-top: 50px; */
+}
+}
