--- a/Second project/css/course.css
+++ b/Second project/css/course.css
@@ -1,75 +1,49 @@
 .head{
     width: 100%;
-    height: 32vh;
-    justify-content: space-around !important;
-
+    height: 25vh;
 }
-.navbar{
-    justify-content: space-around !important;
-    /* text-align: center; */
-}
-.container-fluid .nav{
-    justify-content: space-around !important;
-}
-/* .navbar-nav .nav-link{
-    color: rgb(69, 130, 183);
-    justify-content: space-evenly !important;
-    margin-left: 60px;
-    left: 80px;
-} */
 .ecourses{
     width: 100%;
-    height: 0vh;
+    height: 10vh;
     display: flex;
     justify-content: space-around;
     background-color: rgba(206, 159, 102, 0.788);
 }
-/* .container-fluid .nav-link {
-    text-align: justify;
-    background-color: aliceblue;
-    justify-content: space-evenly !important;
-} */
 .navegaction{
     width: 100%;
     height: 10vh ;
     display: flex;
-    /* justify-content: space-around; */
+    justify-content: space-around;
     align-items: center;
 }
-/* .navegaction .subject{
-    width: 50%;
+.navegaction .subject{
+    width: 20%;
     height: 10vh;
     top: 10px;
     font-size:15px;
     background-color: rgba(255, 166, 0, 0.767);
     text-align: center;
-} */
-/* .navegaction .subject a{
+}
+.navegaction .subject a{
   text-decoration: none;
   color: rgb(255, 255, 255);
 }
 .subject:hover{
     background-color: rgb(255, 145, 0);
-} */
+}
 .navegaction .navbar{
-    width: 95%;
+    width: 50%;
     height: inherit;
     display: flex;
     font-size: 20px;
-    /* align-items: center; */
-    /* justify-content: space-between; */
-    /* background-color: rgb(255, 255, 255); */
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(255, 255, 255);
 }
-.container-fluid a{
-    color: rgb(0, 0, 0);
-}
-.container-fluid a:hover{
-    color: orangered;
-}
-/* .navbar .nav a{
+.navbar .nav a{
     text-decoration: none;
     color: black;
-} */
+}
 .ecourses h1::first-letter{
     color: rgb(255, 102, 0);
     font-size: 35px;
@@ -80,20 +54,15 @@
 .joint{
     width: 10%;
 }
-/* .navbar-brand{
-    font-size: 35px !important;
-    color: orange;
-    margin-right: 120px;
-} */
 .joint button{
  
-    height: 6vh;
+    height: 4vh;
     border: none;
     font-size: 20px;
     border-radius: 10px;
     background-color: rgba(255, 68, 0, 0.849);
     /* margin-top: 5px; */
-        /* width: 100%; */
+        width: 100%;
 
 }
 /* .subject h1{
@@ -102,99 +71,19 @@
 .joint button:hover{
     background-color: rgb(240, 65, 1);
 }
-/* home screen page */
 .homescreen{
     width: 100%;
     height: 100vh;
-    background-image: url(../img/carousel-1.jpg);
+    background-image: url(../img/course-1.jpg);
+    background-repeat: no-repeat;
     background-size: 100% 100vh;
-
-    display: flex;
 }
 .home1{
-    margin-top: 20vh;
-    margin-left: 40vh;
-    color: rgb(231, 217, 198);
-    font-size:20px;
-    font-weight: bolder;
-   
+    color:white;
+    text-align: center;
+    font-size: 20px;
 }
-.home1 h2{
-    font-size: 34px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.home1 h1{
-    font-size: 60px;
-}
-.home1 button{
-    width: 29%;
-    height: 6vh;
-    font-size: 18px;
-    background-color: orangered;
-    border: none;
-    border-radius: 10px;
-    
-    
-}
-.home1 a{
-     border: none;
-    text-decoration: none;
-     color: white;
-}
-.aboutus{
-    width: 100%;
-    height: 80vh;
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    /* align-items: flex-start; */
-    background-color: rgba(255, 166, 0, 0.685);
-    border-radius: 20px;
 
-}
-.contact1 button{
-    width: 29%;
-    height: 6vh;
-    border-radius: 10px;
-    background-color: orangered;
-    font-size: 24px;
-    border: none;
-    color: white;
-}
-.contact1 a{
-    text-decoration: none;
-     color: white;
-}
-.contact{
-    margin-top: 20px;
-    width: 45%;
-    /* height: 80vh; */
-    border-radius: 10px;
-}
-.contact1{
-    margin-top: 20px;
-    width: 45%;
-    /* height: 60vh; */
-
-}
-.contact img{
-    border-radius: 10px;
-    width: 90%;
-    height: 70vh;
-}
-.contact1 h2{
-    font-size: 24px;
-    color: orangered;
-}
-.contact1 h1{
-    font-size: 35px;
-    font-weight: bolder;
-    font-family: Arial, Helvetica, sans-serif;
-}
-.contact1 p{
-    font-size: 18px;
-    line-height: 28px;
-}
 /* explore top subject */
 .expoHeading{
     text-align: center;
@@ -365,11 +254,13 @@
 .expl8:hover{
     box-shadow: 0 2px 20px rgba(0,0,0,10);
 }
-/* popular course page */
+
+/* * popular course page */ 
 .courses{
     display: flex;
     justify-content: space-around;
     width: 100%;
+    height: 100vh;
     text-align: justify;
     /* height: 100vh; */
     /* margin-top: 30px; */
@@ -379,6 +270,7 @@
 .course1{
     width: 32%;
     height: 90vh;
+    /* display: flex; */
     background-color: rgb(235, 235, 230);
     /* margin-left: 20px; */
     justify-content: space-around;
@@ -468,170 +360,14 @@ font-size: 25px;
 }
 .course1 , .course2 , .course3 ,.course4 ,.course5 , .course6{
     height: 100vh;
+    /* display: flex; */
     /* margin: 0px; */
 }
-/* need any course */
-.choose{
-    width: 100%;
-    height: 100vh;
-    background-image:url(../img/registration.jpg);
-    background-size: 100% 110vh;
-    background-repeat: no-repeat;
-    display: flex ;
-    justify-content: space-around;
-    margin-top: 10vh;
-}
-.choose2 h2{
-    background-color: aliceblue;
-     width: 100%; height: 10vh;
-      text-align: center;
-      font-size: 40px;
-      margin-top: 5px;
-}
-.choose1{
-    margin-top: 50px;
-    width: 40%;
-    /* height: 1-0vh; */
-}
-.choose2 select{
-    font-size: 20px; width: 430px;
-}
-.choose1 h1{
-    color: aliceblue;
-    font-size: 30px;
-}
-.choose2{
-    margin-top: 70px ;
-    width: 40%;
-    /* height: 100vh; */
-    text-align: center;
-    /* background-color: aliceblue; */
-}
-.choose2 form{
-    width: 100%;
-    height: 80vh;
-    background-color: tomato;
-    text-align: center;
-}
-.choose2 input, .choose2 select{
-    width: 80%;
-    height: 7vh;
-    font-size: 20px;
-    margin-top: 40px;
-    border-radius: 10px;
-    border: none;
-    text-align: center;
-}
-/* meet our develaper */
-.teachers{
-    width: 100%;
-    height: 90vh;
-    text-align: center;
-}
-.teacher1{
-   display: flex;
-   justify-content: space-around;
-}
-.tech1{
-    background-color: rgb(214, 212, 209);
-    width: 20%;
-    height: 60vh;
-    border-radius: 10px;
-    justify-content: space-around;
-    text-align: center;
-}
-.tech2{
-    background-color: rgb(214, 212, 209);
-    width: 20%;
-    height: 60vh;
-    border-radius: 10px;
-    justify-content: space-around;
-    text-align: center;
-}
-.tech3{
-    background-color: rgb(214, 212, 209);
-    width: 20%;
-    height: 60vh;
-    border-radius: 10px;
-    justify-content: space-around;
-    text-align: center;
-}
-.tech4{
-    background-color: rgb(214, 212, 209);
-    width: 20%;
-    height: 60vh;
-    border-radius: 10px;
-    justify-content: space-around;
-    text-align: center;
-}
 
-.tech1, .tech2 , .tech3 , .tech4{
-    height: 70vh;
-}
-.tech1 h2,h3, .tech2 h2,h3, .tech3 h2,h3, .tech4 h2,h3{
-    /* height: 30vh; */
-    font-size: 30px;
-}
-/* Our Blogs */
-.blogs{
-    width: 100%;
-    height: 80vh;
-    text-align: center;
-    
-}
-.blog{
-    justify-content: space-around;
-    display: flex;
-}
-.blog1 h2{
-    color: aliceblue;
-    font-size: 30px;
-
-}
-.blog1{
-    width: 30%;
-    height: 5045;
-    text-align: center;
-    border-radius: 10px;
-    background-color: rgb(216, 213, 209);
-    background-image: url(../img/blog-1.jpg);
-    background-size: 100% 50vh;
-    background-repeat: no-repeat;
-}
-.blog2 h2{
-    color: aliceblue;
-    font-size: 30px;
-
-}
-.blog2{
-    width: 30%;
-    height: 50vh;
-    text-align: center;
-    border-radius: 10px;
-    background-color: rgb(216, 213, 209);
-    background-image: url(../img/blog-2.jpg);
-    background-size: 100% 50vh;
-    background-repeat: no-repeat;
-}
-.blog3 h2{
-    color: aliceblue;
-    font-size: 30px;
-
-}
-.blog3{
-    width: 30%;
-    height: 50vh;
-    text-align: center;
-    border-radius: 10px;
-    background-color: rgb(216, 213, 209);
-    background-image: url(../img/blog-3.jpg);
-    background-size: 100% 50vh;
-    background-repeat: no-repeat;
-}
-/* Foooter section */
 .footer{
     width: 100%;
     height: 60vh;
+    margin-top: 40px;
     display: flex;
     background-color: rgb(3, 2, 88);
     justify-content: space-around;
@@ -693,12 +429,9 @@ font-size: 25px;
     text-align: justify;
 }
 
-.teacher1 h1{
-font-size: 30px !important;
-}
-@media only screen and (max-width: 1300px) {
-    .head{
-        height: 15vh;
+@media screen and (max-width:1300px) {
+     .head{
+        height: 3vh;
     }
     .ecourses{
         height: 6vh;
@@ -724,19 +457,8 @@ font-size: 30px !important;
     }
     .home1{
         margin-top: 12vh;
-        margin-left: 25%;
-    }
-    .aboutus {
-        height: 45vh ;
-    }
-    .contact img{
-        height: 40vh;
-    }
-    .contact{
-        height: 90vh;
-    }
-    .contact1{
-        height: 55vh;
+        /* margin-left: 25%; */
+        text-align: center;
     }
     .expoHeading{
         margin-top: 10px;
@@ -821,57 +543,6 @@ font-size: 30px !important;
     .course6{
         height: 50vh;
     }
-    .choose{
-        height: 60vh;
-    }
-    .choose1 p{
-        line-height: 3vh;
-    }
-    .choose2 form{
-        height: 45vh;
-     
-    }
-    .choose2{
-        height: 50vh;
-    
-    }
-    .choose2 input, .choose2 select{
-        height: 55px;
-    }
-    .teachers{
-        height: 40vh;
-    }
-    .tech1{
-        height: 30vh;
-    }.tech2{
-        height: 30vh;
-    }
-    .tech3{
-        height: 30vh;
-    }
-    .tech4{
-        height: 30vh;
-    }
-    .blogs{
-        height: 50vh;
-    }
-    .blog1{
-        height: 30vh;
-    }
-    .blog2{
-        height: 30vh;
-    }
-    .blog3{
-        height: 30vh;
-    }
-    .footer{
-        height: 40vh;
-    }
-    .tech1 h2, .tech2 h2, .tech3 h2, .tech4 h2{
-    font-size: 35px !important;
-}
-    
-   
 }
 @media screen and (max-width:1280px) {
      .contact1 button{
@@ -895,21 +566,9 @@ font-size: 30px !important;
         text-align: justify;
     }
 }
-@media only screen and (max-width:1080px) {
-    .tech1, .tech2, .tech3, .tech4 {
-    width: 24%;
-}
-.choose1 p{
-    font-size: 26px;
-}
 
-
- .contact1 p {
-    font-size: 14px;
-    /* line-height: 28px; */
-    text-align: justify;
-}
-.explore{
+@media screen and (max-width:1080px) {
+    .explore{
     display: flex;
     height: 125vh;
 }
@@ -940,199 +599,17 @@ font-size: 30px !important;
     margin-bottom: 30px;
     text-align: justify;
     justify-content: space-evenly;
-} form{
-    width: 110%;
 }
-.choose2{
-    width: 50%;
-}
-
-}
- 
- @media screen and (max-width:980px) {
-    .homescreen{
-        height: 40vh;
-    }
-    .home1{
-        margin-top: 10px;
-        margin-left:10vh;
-        font-size: 10px;
-    }
-    .homescreen,img{
-        background-size: 73vh;
-    }
-    .aboutus{
-        height: 37vh !important;
-        text-align: justify !important;
-    }
-    .contact img{
-        width: 95%;
-        height: 33vh;
-    }
-    .contact1{
-        width: 50%;
-        margin-top: 5px;
-    }
-    .contact1 p
-    {
-        line-height: 23px;
-    }
-     .contact1 button {
-        height: 5vh;
-        width: 40%;
-    }
-    .tech1 h2,h3, .tech2 h2,h3, .tech3 h2,h3, .tech4 h2,h3{
-    /* height: 30vh; */
-    font-size: 28px;
-}
-.choose2{
-    width: 55%;
-}
-    
-}
-@media screen and (max-width:880px) {
-    .homescreen,img{
-        background-size: 100% 40vh;
-    }
-    .aboutus{
-        display: block;
-        height: 70vh !important;
-       
-
-    }
-    .contact img{
-        height: 40vh;
-        text-align: justify;
-        width: 222%;
-        /* margin-left: 15px;
-        margin-top: 10px; */
-    }
-    .contact1{
-        width: 90%;
-        margin-left: 30px;
-        text-align: justify !important;
-        justify-content: space-around !important;
-        margin-top: -50vh !important;
-    }
-    .contact1 button{
-        width: 30%;
-        height: 4vh;
-    }
-    .choose{
-        height: 55vh;
-        background-size: 100% 60vh;
-    }
-    .choose1{
-        margin-top: 10px;
-    }
-    .choose1 p{
-        line-height: 30px;
-    }
-    .choose2{
-        margin-top: 20px;
-        width: 45%;
-    }
-     .choose2 form{
-        height: 42vh;
-    }
-    .choose2 h2{
-        height: 5vh;
-    }
-     .tech1 h2,h3, .tech2 h2,h3, .tech3 h2,h3, .tech4 h2,h3{
-    /* height: 30vh; */
-    font-size: 25px;
-}
-.choose2{
-    width: 50%;
-}
-.choose2 input{
-    height: 45px;
-}
-.choose2 select{
-    height: 45px;
+.footer{
+    margin-top: 10vh;
 }
 }
 
 @media screen and (max-width:720px) {
-      .home1 h1{
-        font-size: 45px;
-        margin-left: -40px;
-    }
-    .home1 h2{
-        font-size: 40px;
-        margin-left: -40px;
-    }
-    .home1 button{
-        height: 4vh;
-        margin-left: -40px;
-    }
-    .homescreen,img{
-        background-size: 100% 40vh;
-    }
-
-    .course1,.course2,.course3,.course4,.course5,.course6{
+      /* .course1,.course2,.course3,.course4,.course5,.course6{
        height: 44vh;
-}
- .headingpopul{
-    font-size: 15px !important;
- }
-    .one{
-        font-size: 20px;
-    }
-    .two{
-        font-size: 20px;
-    }
-    .choose1 p{
-        line-height: 27px;
-    }
-    .teacher1{
-    display: block;
-    height: 150vh !important;
-}
-.teachers{
-    height: 230vh;
-}
-.tech1,.tech2,.tech3,.tech4{
-    width: 100%;
-    height: 50vh;
-    margin-bottom: 5vh;
-}
-.tech1 img,.tech2 img,.tech3 img,.tech4 img{
-    height: 35vh;
-}
-.tech1 h2,.tech2 h2,.tech3 h2,.tech4 h2{
-    /* height: 35vh; */
-    font-size: 45px !important;
-}
-.tech1 h3,.tech2 h3,.tech3 h3,.tech4 h3{
-    /* height: 35vh; */
-    font-size: 45px;
-}
-.blogs{
-    height: 110vh;
-
-}
-.blog{
-    display: block;
-}
-.blog1,.blog2,.blog3{
-    width: 100%;
-}
-.blog1 h2,.blog2 h2,.blog3 h2{
-    font-size: 50px;
-    /* margin-top: 50px; */
-}
-.choose2{
-    width: 55%;
-}
-
-}
-
-@media screen and (max-width:680px) {
-     .contact1 button{
-        height: 3vh;
-     }
-    .explore{
+} */
+.explore{
         display: block;
         height: 245vh;
     }
@@ -1155,35 +632,7 @@ font-size: 30px !important;
     /* height: 49vh; */
     
 }
-
-.choose{
-    display: block;
-    height: 60vh;
+.footer{
+    margin-top: 30vh;
 }
-.choose img{
-    width: 20% !important;
-    height: 2000vh !important;
-}
-.choose1{
-    width: 98%;
-}
-.choose2{
-    width: 100%;
-    justify-content: space-around;
-    text-align: justify;
-    /* margin-left: 15px; */
-  height: 40vh;
-}
-.choose2 form{
-  height: 34vh;
-}
-.choose2 input{
-    margin-top: 25px !important;
-  height: 45px;
-}
-.choose2 select{
-    margin-top: 25px !important;
-  height: 45px;
-}
-
 }
