--- a/Second project/css/indexs.css
+++ b/Second project/css/indexs.css
@@ -1,22 +1,33 @@
 .head{
     width: 100%;
-    height: 32vh;
-    justify-content: space-around !important;
+    height: 19vh;
+}
 
-}
-.navbar{
-    justify-content: space-around !important;
-    /* text-align: center; */
-}
-.container-fluid .nav{
-    justify-content: space-around !important;
-}
-/* .navbar-nav .nav-link{
-    color: rgb(69, 130, 183);
-    justify-content: space-evenly !important;
-    margin-left: 60px;
-    left: 80px;
-} */
+.top-bar {
+      font-size: 17px;
+      text-align: justify
+      ;
+      justify-content: space-around;
+    }
+
+
+    /* Navbar */
+    .navbar-brand {
+      font-weight: 700;
+      font-size: 1.3rem;
+    }
+
+    .nav-link {
+      font-weight: 500;
+    }
+
+    /* Offcanvas menu width */
+    .offcanvas {
+      width: 280px;
+    }
+    .col-lg-4 #ecourse{
+        color: orange; 
+    }
 .ecourses{
     width: 100%;
     height: 0vh;
@@ -35,6 +46,10 @@
     display: flex;
     /* justify-content: space-around; */
     align-items: center;
+}
+   #subject{
+
+   width: 25%;height: 10vh;color: white; text-align: center; margin-right: 10vh; font-size: 25px; background-color: orange;
 }
 /* .navegaction .subject{
     width: 50%;
@@ -698,11 +713,14 @@ font-size: 30px !important;
 }
 @media only screen and (max-width: 1300px) {
     .head{
-        height: 15vh;
+        height: 13vh;
     }
     .ecourses{
         height: 6vh;
         font-size: 18px;
+    }
+    #subject{
+        height: 6vh;
     }
     .ecourses h2{
         font-size: 20px;
@@ -895,6 +913,12 @@ font-size: 30px !important;
         text-align: justify;
     }
 }
+@media screen and (max-width:1200px) {
+     .top-bar{
+        font-size: 15px;
+     }
+    }
+
 @media only screen and (max-width:1080px) {
     .tech1, .tech2, .tech3, .tech4 {
     width: 24%;
@@ -948,8 +972,27 @@ font-size: 30px !important;
 }
 
 }
+@media screen and (max-width:1000px) {
+    .head{
+        /* height: 1px; */
+        margin-bottom: -5vh;
+    }
+}
  
- @media screen and (max-width:980px) {
+ @media screen and (max-width:991px) {
+    #subject{
+        height: 7vh;
+    }
+    .navegaction .navbar{
+        width: 100%;
+        height: 112px;
+    }
+    .navegaction .joint{
+        display: none;
+    }
+    #dark{
+        display: none;
+    }
     .homescreen{
         height: 40vh;
     }
