--- a/Second project/css/contact.css
+++ b/Second project/css/contact.css
@@ -1,93 +1,46 @@
 .head{
     width: 100%;
-    height: 25vh;
-}
-.ecourses{
-    width: 100%;
-    height: 10vh;
-    display: flex;
-    justify-content: space-around;
-    background-color: rgba(206, 159, 102, 0.788);
-}
-.navegaction{
-    width: 100%;
-    height: 10vh ;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-.navegaction .subject{
-    width: 20%;
-    height: 10vh;
-    top: 10px;
-    font-size:15px;
-    background-color: rgba(255, 166, 0, 0.767);
-    text-align: center;
-}
-.navegaction .subject a{
-  text-decoration: none;
-  color: rgb(255, 255, 255);
-}
-.subject:hover{
-    background-color: rgb(255, 145, 0);
-}
-.navegaction .navbar{
-    width: 50%;
-    height: inherit;
-    display: flex;
-    font-size: 20px;
-    align-items: center;
-    justify-content: space-between;
-    background-color: rgb(255, 255, 255);
-}
-.navbar .nav a{
-    text-decoration: none;
-    color: black;
-}
-.ecourses h1::first-letter{
-    color: rgb(255, 102, 0);
-    font-size: 35px;
-}
-.nav a:hover{
-    color: rgb(255, 102, 0);
-}
-.joint{
-    width: 10%;
-}
-.joint button{
- 
-    height: 4vh;
-    border: none;
-    font-size: 20px;
-    border-radius: 10px;
-    background-color: rgba(255, 68, 0, 0.849);
-    /* margin-top: 5px; */
-        width: 100%;
-
-}
-/* .subject h1{
-    margin-top: 44px;
-} */
-.joint button:hover{
-    background-color: rgb(240, 65, 1);
+    height: 18vh;
 }
 
+.top-bar {
+      font-size: 17px;
+      text-align: justify
+      ;
+      justify-content: space-around;
+    }
+
+
+    /* Navbar */
+    .navbar-brand {
+      font-weight: 700;
+      font-size: 1.3rem;
+    }
+
+    .nav-link {
+      font-weight: 500;
+    }
+
+    /* Offcanvas menu width */
+    .offcanvas {
+      width: 280px;
+    }
+    .col-lg-4 #ecourse{
+        color: rgb(255, 167, 3); 
+    }
 /* * home screen page */
 .homescreen{
     width: 100%;
-    height: 100vh;
-    background-image: url(../img/carousel-1.jpg);
+    height: 110vh;
+    background-image: url(../img/carousel-2.jpg);
+    background-repeat: no-repeat;
     background-size: 100% 100vh;
-    display: flex;
 }
-.home1 {
+.home1{
     color:white;
-    margin-left: 90vh;
-/* text-align: center; */
-    /* text-align: center; */
-    font-size: 20px;   
+    text-align: center;
+    font-size: 20px;
 }
-
 /* contact form */
 
 .contactheading{
@@ -106,8 +59,7 @@ text-align: center;
     height: 70vh;
     border-radius: 10px;
     background-color: rgb(0, 128, 255);
-    /* text-align: center; */
-    /* margin-left: 43vh; */
+   
 }
 .contact1{
     text-align: center;
@@ -195,16 +147,45 @@ text-align: center;
 
 }
  @media screen and (max-width:1280px) {
+    .head{
+        height: 13vh;
+    }
      .homescreen{
     height: 60vh;
-    /* text-align: center; */
+    text-align: center;
     }
     .homescreen,img{
         background-size: 100% 60vh;
+    text-align: center;
+
     }
-    .home1{
-        margin-left: 40vh;
-    }
+   
     .contact{
 text-align: center !important;    }
+ }
+ @media screen and (max-width:991px) {
+    .head{
+        height: 7vh;
+    }
+    
+ }
+ @media screen and (max-width:1280px) {
+     
+    .footer{
+        display: block;
+        height: inherit;
+    }
+    .footer1{
+        display: flex;
+    }
+    .footer1 p{
+        font-size: 25px !important;
+    }
+    .footersecond{
+        width: 80%;
+        justify-content: space-around;
+        margin-left: 55px;
+        font-size: 25px;
+        text-align: justify;
+    }
  }
