--- a/Second project/css/indexs.css
+++ b/Second project/css/indexs.css
@@ -1152,7 +1152,7 @@ font-size: 30px !important;
     font-size: 45px;
 }
 .blogs{
-    height: 110vh;
+    height: 170vh;
 
 }
 .blog{
@@ -1160,6 +1160,9 @@ font-size: 30px !important;
 }
 .blog1,.blog2,.blog3{
     width: 100%;
+    justify-content: space-around;
+    height: 50vh;
+    margin-top: 20px;
 }
 .blog1 h2,.blog2 h2,.blog3 h2{
     font-size: 50px;
